--- a/media/asciidoctor-editor.css
+++ b/media/asciidoctor-editor.css
@@ -342,13 +342,14 @@ td {
 
 a {
   /* DISABLED color: #2156a5; */
-  text-decoration: underline;
+  text-decoration: none;
   line-height: inherit
 }
 
 a:hover,
 a:focus {
-  color: #1d4b8f
+  color: #1d4b8f;
+  text-decoration: underline
 }
 
 a img {
